[package]
name = "ruby-version-badger"
version = "0.1.1"
target = "1.49.0"
edition = "2018"
authors = ["James Smith <james@floppy.org.uk>"]

[dependencies]
iron = "^0.6"
router = "^0.6"
mount = "^0.4"
staticfile = "^0.5"
regex = "*"
log = "^0.4"
env_logger = "^0.8"
reqwest = { version = "^0.11.2", features = ["blocking"] }
yaml-rust = "^0.4"
